# notes

./: .gitignore  README.md  pyproject.toml
openspec/changes/archive/2026-07-12-notes-tracking-cli-tui/: design.md  proposal.md
openspec/changes/archive/2026-07-12-notes-tracking-cli-tui/specs/cli/: spec.md
openspec/changes/archive/2026-07-12-tui-edit-save-button/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-12-tui-edit-save-button/specs/tui/: spec.md
openspec/changes/archive/2026-07-12-tui-tree-select-note/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-12-tui-tree-select-note/specs/tui/: spec.md
openspec/changes/archive/2026-07-12-tui-unified-create-note/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-12-tui-unified-create-note/specs/tui/: spec.md
openspec/changes/archive/2026-07-14-tui-copy-note-clipboard/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-14-tui-copy-note-clipboard/specs/tui/: spec.md
openspec/changes/notes-tracking-cli-tui/: tasks.md
openspec/changes/notes-tracking-cli-tui/specs/note-storage/: spec.md
openspec/changes/notes-tracking-cli-tui/specs/tui/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/note-storage/: spec.md
openspec/specs/tui/: spec.md
src/notes/: __init__.py  __main__.py  config.py  models.py  search.py  storage.py  tree.py
src/notes/cli/: app.py
src/notes/tui/: app.py  clipboard.py
tests/: test_cli.py  test_config.py  test_models.py  test_search.py  test_storage.py  test_tree.py  test_tui.py  test_tui_clipboard.py
