[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notes"
version = "0.1.1"
description = "Local-first notes tracker with CLI and TUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "textual",
    "python-frontmatter",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
notes = "notes.cli.app:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/notes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
